# service/service-api/docs/swagger/swagger.yaml
@@ -318,18 +318,18 @@ definitions:
         example: 2358885120275906
         type: integer
     type: object
-host: localhost:8090
+host: www.bitesla.com:8090
 info:
   contact:
     email: idea_wj
     name: idea_wj@163.com
     url: http://www.wjblog.top/
-  description: 暂无描述
+  description: '代币量化交易框架，使用前请先在本地hosts文件中加入: xx.xx.xx.xx(当前机器的ip地址) www.bitesla.com'
   license:
-    name: Apache 2.0
+    name: Apache beta 1.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
   termsOfService: http://www.wjblog.top/
-  title: bitesla
+  title: bitesla（比特斯拉）
   version: "2.0"
 paths:
   /exchange/cancelOrder:
