# service/service-api/main.go
@@ -52,18 +52,18 @@ func init() {
 	err = redisCache.ClearAll()
 }
 
-// @title bitesla
+// @title bitesla（比特斯拉）
 // @version 2.0
-// @description 暂无描述
+// @description 代币量化交易框架，使用前请先在本地hosts文件中加入: xx.xx.xx.xx(当前机器的ip地址) www.bitesla.com
 // @termsOfService http://www.wjblog.top/
 
 // @contact.name idea_wj@163.com
 // @contact.url http://www.wjblog.top/
 // @contact.email idea_wj
 
-// @license.name Apache 2.0
+// @license.name Apache beta 1.0
 // @license.url http://www.apache.org/licenses/LICENSE-2.0.html
-// @host localhost:8090
+// @host www.bitesla.com:8090
 // @BasePath /
 
 // @securityDefinitions.apikey token
